i18n/ja/docusaurus-plugin-content-docs/version-0.4.x/operations/commit.md
---
sidebar_position: 3
---

# 変更のコミット

コミットを作成し、履歴を表示し、リポジトリの状態を管理します。

## キーバインド

### コミット入力

| キー        | アクション             |
| :---------- | :--------------------- |
| `c`         | コミット               |
| `A`         | コミットの修正 (Amend) |
| `ctrl+e`    | 送信                   |
| `esc`       | キャンセル             |
| `tab`       | 次のフィールド         |
| `shift+tab` | 前のフィールド         |

### コミットの表示とリセット

| キー    | アクション                 |
| :------ | :------------------------- |
| `r`     | 選択したコミットをリセット |
| `R`     | 最新のコミットをリセット   |
| `enter` | 詳細を表示                 |

## ワークフロー

### コミットの作成

1.  **ステージ**: **変更されたファイル** パネルでファイルがステージングされていることを確認します。
2.  **トリガー**: `c` を押します。
3.  **ポップアップ**: **コミットポップアップ** が 2 つのフィールドと共に表示されます：
    - **Summary**: コミットメッセージの 1 行目。
    - **Description**: コミットメッセージの詳細本文。
4.  **入力**:
    - サマリーを入力します。
    - `tab` を押して詳細（オプション）に移動します。
5.  **送信**: `ctrl+e` を押します。
    - **なぜ `ctrl+e` なのか？**: 詳細フィールドでは `enter` が改行に使用されるため、フォームの送信には `ctrl+e` が使用されます。

---

### コミットの修正 (Amend)

1.  **トリガー**: `A` (shift+a) を押します。
2.  **ポップアップ**: **Amend コミットポップアップ** が開き、*前回*のコミットメッセージが事前入力されています。
3.  **修正**: メッセージを編集するか、単に送信して新しくステージングされたファイルを含めます。
4.  **送信**: `ctrl+e` を押します。

---

### コミット履歴の表示

1.  **ナビゲーション**: `3` を押して **コミットログ** にフォーカスします。
2.  **グラフ**: リストには視覚的な分岐グラフとコミットの概要が表示されます。
3.  **詳細**: **詳細パネル** (右) には、以下を含む完全なコミット情報が表示されます：
    - 作成者、日付、ハッシュ
    - 完全なメッセージ
    - 統計の概要 (挿入/削除)
    - **差分**: そのコミットの完全なファイルの変更。

---

### コミットのリセット

`soft`、`mixed`、または `hard` リセットを使用して履歴を調整します。

#### 最新のコミットをリセット

1.  **トリガー**: コミットログで `R` (shift+r) を押します。
2.  **モードの選択**:
    - **Soft**: 変更をステージングに残します。
    - **Mixed**: 変更を作業ディレクトリ（未ステージング）に残します。
    - **Hard**: すべての変更を破棄します。
3.  **確認**: 続行するかどうかのプロンプトが表示されます。

#### 特定のコミットにリセット

1.  **選択**: ログ内のターゲットコミットをハイライトします。
2.  **トリガー**: `r` を押します。
3.  **モードの選択**: そのコミットをターゲットとする Soft、Mixed、または Hard リセットを選択します。
4.  **確認**: リセットを続行します。

### チェリーピック

履歴から特定のコミットを現在のブランチにチェリーピックします。

1.  **アクセス**: **コミットログ** コンポーネントに移動します (`3` を押します)。
2.  **モード開始**: `ctrl+p` を押してチェリーピックモードに入ります。
3.  **選択**:
    - `↑` / `↓` で移動します。
    - `space` を押してコミットを選択または選択解除します。
4.  **編集**: `e` を押して選択内容を確認または編集します (オプション)。
5.  **確認**: `a` を押して、チェリーピックする選択されたコミットを確認します。
6.  **適用**: `enter` を押してチェリーピック操作を適用します。

:::info
操作中に競合が発生した場合は、グローバルキー **`C`** (継続) または **`ctrl+a`** (中止) を使用してください。
:::
